; ModuleID = '/home/carl/AnghaBench/sqlcipher/src/extr_vdbeaux.c_sqlite3VdbeGetBoundValue.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/src/extr_vdbeaux.c_sqlite3VdbeGetBoundValue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { %struct.TYPE_9__*, %struct.TYPE_8__* }
%struct.TYPE_9__ = type { i32 }
%struct.TYPE_8__ = type { i32 }

@SQLITE_EnableQPSG = common dso_local global i32 0, align 4
@MEM_Null = common dso_local global i32 0, align 4
@SQLITE_UTF8 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @sqlite3VdbeGetBoundValue(%struct.TYPE_7__* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_7__*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.TYPE_8__*, align 8
  %9 = alloca i32*, align 8
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %10 = load i32, i32* %6, align 4
  %11 = icmp sgt i32 %10, 0
  %12 = zext i1 %11 to i32
  %13 = call i32 @assert(i32 %12)
  %14 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %15 = icmp ne %struct.TYPE_7__* %14, null
  br i1 %15, label %16, label %59

16:                                               ; preds = %3
  %17 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %18 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %17, i32 0, i32 1
  %19 = load %struct.TYPE_8__*, %struct.TYPE_8__** %18, align 8
  %20 = load i32, i32* %6, align 4
  %21 = sub nsw i32 %20, 1
  %22 = sext i32 %21 to i64
  %23 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %19, i64 %22
  store %struct.TYPE_8__* %23, %struct.TYPE_8__** %8, align 8
  %24 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %25 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %24, i32 0, i32 0
  %26 = load %struct.TYPE_9__*, %struct.TYPE_9__** %25, align 8
  %27 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = load i32, i32* @SQLITE_EnableQPSG, align 4
  %30 = and i32 %28, %29
  %31 = icmp eq i32 %30, 0
  %32 = zext i1 %31 to i32
  %33 = call i32 @assert(i32 %32)
  %34 = load %struct.TYPE_8__*, %struct.TYPE_8__** %8, align 8
  %35 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %34, i32 0, i32 0
  %36 = load i32, i32* %35, align 4
  %37 = load i32, i32* @MEM_Null, align 4
  %38 = and i32 %36, %37
  %39 = icmp eq i32 0, %38
  br i1 %39, label %40, label %58

40:                                               ; preds = %16
  %41 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %42 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %41, i32 0, i32 0
  %43 = load %struct.TYPE_9__*, %struct.TYPE_9__** %42, align 8
  %44 = call i32* @sqlite3ValueNew(%struct.TYPE_9__* %43)
  store i32* %44, i32** %9, align 8
  %45 = load i32*, i32** %9, align 8
  %46 = icmp ne i32* %45, null
  br i1 %46, label %47, label %56

47:                                               ; preds = %40
  %48 = load i32*, i32** %9, align 8
  %49 = bitcast i32* %48 to %struct.TYPE_8__*
  %50 = load %struct.TYPE_8__*, %struct.TYPE_8__** %8, align 8
  %51 = call i32 @sqlite3VdbeMemCopy(%struct.TYPE_8__* %49, %struct.TYPE_8__* %50)
  %52 = load i32*, i32** %9, align 8
  %53 = load i32, i32* %7, align 4
  %54 = load i32, i32* @SQLITE_UTF8, align 4
  %55 = call i32 @sqlite3ValueApplyAffinity(i32* %52, i32 %53, i32 %54)
  br label %56

56:                                               ; preds = %47, %40
  %57 = load i32*, i32** %9, align 8
  store i32* %57, i32** %4, align 8
  br label %60

58:                                               ; preds = %16
  br label %59

59:                                               ; preds = %58, %3
  store i32* null, i32** %4, align 8
  br label %60

60:                                               ; preds = %59, %56
  %61 = load i32*, i32** %4, align 8
  ret i32* %61
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32* @sqlite3ValueNew(%struct.TYPE_9__*) #1

declare dso_local i32 @sqlite3VdbeMemCopy(%struct.TYPE_8__*, %struct.TYPE_8__*) #1

declare dso_local i32 @sqlite3ValueApplyAffinity(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
